--- a/paper/markdown/figures_and_tables.Rmd
+++ b/paper/markdown/figures_and_tables.Rmd
@@ -9,7 +9,7 @@ output:
     reference_docx: ms_template.docx
     
 bibliography: hyposmia_biblio.bib
-csl: frontiers_medical.csl
+csl: european-archives-of-oto-rhino-laryngology.csl
 header-includes:
   \usepackage{longtable}
   \usepackage{tabu}
@@ -82,14 +82,6 @@ paper_tbl$covild_baseline %>%
 
 # Figures {#sec:figures}
 
-```{r fig-consort, fig.width = mm_inch(figures$consort$w), fig.height = mm_inch(figures$consort$h), fig.cap = 'Flow diagram of the analysis inclusion process for the longitudinal CovILD cohort and the Health after COVID-19 survey study.'}
-
-figures$consort$plot
-
-```
-
-__Figure \@ref(fig:fig-consort). Flow diagram of the analysis inclusion process for the longitudinal CovILD cohort and the Health after COVID-19 survey study.__
-
 \newpage
 
 ```{r fig-sympt-recovery, fig.width = mm_inch(figures$sympt_recovery$w), fig.height = mm_inch(figures$sympt_recovery$h), fig.cap = 'Symptom-specific recovery times in ambulatory COVID-19 survey study.'}
@@ -104,45 +96,49 @@ _Symptom-specific recovery times were calculated for each participants of the su
 
 _(A) Distribution of the recovery times in the individuals with the indicated symptoms present during acute COVID-19 (first 14 days after clinical onset). Diamonds represent median recovery times, tinted ellipses code for interquartile ranges. Numbers of complete observations are indicated in the plot captions._
 
-_(B) Percentages of individuals with smell and taste disorders in the AT (Austria) and IT (Italy) survey study cohorts at particular time points after clinical onset. Numbers of complete observations are indicated under the plots._
+_(B) Percentages of individuals with self-reported olfactory dysfunction and taste disorders in the AT (Austria) and IT (Italy) survey study cohorts at particular time points after clinical onset. Numbers of complete observations are indicated under the plots._
+
+_OD: self-reported olfactory dysfunction, Imp. concentration: impaired concentration, Dim. appetite: diminished appetite, Imp. walk: impaired walk, Imp. FMS: impaired fine-motor skills._
 
 \newpage
 
-```{r fig-sympt-mds, fig.width = mm_inch(figures$sympt_mds$w), fig.height = mm_inch(figures$sympt_mds$h), fig.cap = 'Self-reported smell and taste disorders are isolated persistent symptoms of COVID-19.'}
+```{r fig-sympt-mds, fig.width = mm_inch(figures$sympt_mds$w), fig.height = mm_inch(figures$sympt_mds$h), fig.cap = 'Self-reported olfactory dysfunction and taste disorders are isolated persistent symptoms of COVID-19.'}
 
 figures$sympt_mds$plot
 
 ```
 
-__Figure \@ref(fig:fig-sympt-mds). Self-reported smell and taste disorders are isolated persistent symptoms of COVID-19.__
+__Figure \@ref(fig:fig-sympt-mds). Self-reported olfactory dysfunction and taste disorders are isolated persistent symptoms of COVID-19.__
 
 _Symptom data during at $\geq$ 28 days (A) and $\geq$ 3 moths (B) after clinical onset in the Austria (AT) and Italy (IT) survey study cohorts were subjected to two-dimensional multi-dimensional scaling (MDS) with simple matching distance (SMD) between the symptoms. MDS coordinates are presented in point plots. Selected data points are labeled with the symptom names. Percentages of the data set variance associated with the MDS dimensions are indicated in the plot axes. Numbers of complete observations are indicated under the plots._
 
+_OD: self-reported olfactory dysfunction, Imp. concentration: impaired concentration._
+
 \newpage
 
-```{r fig-apriori, fig.width = mm_inch(figures$apriori$w), fig.height = mm_inch(figures$apriori$h), fig.cap = 'Co-occurrence of smell and taste disorders in post-acute COVID-19 sequelae.'}
+```{r fig-apriori, fig.width = mm_inch(figures$apriori$w), fig.height = mm_inch(figures$apriori$h), fig.cap = 'Co-occurrence of self-reported olfactory dysfunction and other symptoms in post-acute COVID-19 sequelae.'}
 
 figures$apriori$plot
 
 ```
 
-__Figure \@ref(fig:fig-apriori). Co-occurrence of smell and taste disorders in post-acute COVID-19 sequelae.__
+__Figure \@ref(fig:fig-apriori). Co-occurrence of self-reported olfactory dysfunction and other symptoms in post-acute COVID-19 sequelae.__
 
-_Frequent combinations of symptoms at $\geq$ 28 days (A) and $\geq$ 3 months (B) after clinical onset in the Austria (AT) and Italy (IT) survey study cohorts were identified with the apriori algorithm. Symptom combination support and confidence are presented in the plots. Point color codes for lift statistic values. The hypo/anosmia and hypo/ageusia combinations are labeled._
+_Frequent combinations (>15% of cohort) of self-reported olfactory dysfunction (OD) and other symptoms at $\geq$ 28 days (A) and $\geq$ 3 months (B) after clinical onset in the Austria (AT) and Italy (IT) survey study cohorts were identified with the apriori algorithm. Symptom combination frequency (support statistic) and co-occurrence (support statistic) are presented in bubble plots. Point size and color corresponds to co-occurrence, points are labeled with percentages of co-occurrence. Imp. concentration: impaired concentration._
 
 \newpage
 
-```{r fig-sympt-clusters, fig.width = mm_inch(figures$sympt_clusters$w), fig.height = mm_inch(figures$sympt_clusters$h), fig.cap = 'Differing duration of neurocognitive and respiratory symptoms, fatigue, smell and taste disorders defines the COVID-19 recovery clusters.'}
+```{r fig-sympt-clusters, fig.width = mm_inch(figures$sympt_clusters$w), fig.height = mm_inch(figures$sympt_clusters$h), fig.cap = 'Differing duration of neurocognitive and respiratory symptoms, fatigue, olfactory dysfunction and taste disorders defines the COVID-19 recovery clusters.'}
 
 figures$sympt_clusters$plot
 
 ```
 
-__Figure \@ref(fig:fig-sympt-clusters). Differing duration of neurocognitive and respiratory symptoms, fatigue, smell and taste disorders defines the COVID-19 recovery clusters.__
+__Figure \@ref(fig:fig-sympt-clusters). Differing duration of neurocognitive and respiratory symptoms, fatigue, olfactory dysfunction and taste disorders defines the COVID-19 recovery clusters.__
 
-_The smell and taste disorder recovery (STDR), rapid recovery (RR) and slow recovery (SR) clusters of the survey study participants were identified by semi supervised PAM clustering (partitioning around medoids, Euclidean distance, training cohort: Austria [AT], test cohort: Italy [IT]). Mean recovery times in the recovery clusters are presented as lines, 2 $\times$ SEM intervals are displayed as tinted regions. Numbers of individuals assigned to the recovery clusters are indicated under the plots._
+_Clustering of the survey study participants in respect to symptom-specific recovery times was done by semi-supervised PAM algorithm (partitioning around medoids, Euclidean distance, training cohort: Austria [AT], test cohort: Italy [IT]). Mean recovery times in the recovery clusters are presented as lines, 2 $\times$ SEM intervals are displayed as tinted regions. Numbers of individuals assigned to the recovery clusters are indicated under the plots._
 
-_Dim. appetite: diminished appetite, Imp. concentration: impaired concentration, Imp. walk: impaired walk, Imp. FMS: impaired fine motor skills._
+_OD: self-reported olfactory dysfunction, Dim. appetite: diminished appetite, Imp. concentration: impaired concentration, Imp. walk: impaired walk, Imp. FMS: impaired fine motor skills._
 
 \newpage
 
@@ -154,6 +150,6 @@ figures$recovery_clusters$plot
 
 __Figure \@ref(fig:fig-recovery-clusters). Good clinical and mental health status and quality of life at the survey completion in individuals with persistent smell and taste disorders.__
 
-_Differences in minimum/maximum scaled readouts of clinical and physical recovery, mental health and quality of life at the time of survey completion in the recovery clusters (STDR: smell and taste disorder recovery, RR: rapid recovery, SR: slow recovery) in the Austria (AT) and Italy (IT) survey study cohorts. Dichotomous items (incomplete convalescence, weight loss, new medication and need for rehabilitation) were binarized (yes: 1, no: 0) prior to visualization. Statistical significance for differences between the clusters was assessed by Kruskal-Wallis (numeric readouts) or $\chi^2$ test (dichotomous readouts). P values were corrected for multiple testing with Benjamini-Hochberg method. Lines represent mean values, 2 $\times$ SEM intervals are displayed as tinted regions. Numbers of individuals assigned to the recovery clusters are indicated under the plots._
+_Clustering of the survey study participants in respect to symptom-specific recovery times was done by the semi-supervised PAM algorithm (partitioning around medoids, Euclidean distance, training cohort: Austria [AT], test cohort: Italy [IT]). Minimum/maximum scaled readouts of clinical and physical recovery, mental health and quality of life at the time of survey completion in the clusters in the Austria (AT) and Italy (IT) survey study cohorts are presented. Dichotomous items (incomplete convalescence, weight loss, new medication and need for rehabilitation) were binarized (yes: 1, no: 0) prior to visualization. Statistical significance for differences between the clusters was assessed by Kruskal-Wallis (numeric readouts) or $\chi^2$ test (dichotomous readouts). P values were corrected for multiple testing with Benjamini-Hochberg method. Lines represent mean values, 2 $\times$ SEM intervals are displayed as tinted regions. Numbers of individuals assigned to the recovery clusters are indicated under the plots._
 
 _incomplete recovery: self-reported incomplete recovery, # persist. symptoms: number of symptoms at $\geq$ 28 days after clinical onset, phys. performance loss: physical performance loss as compared with the time before COVID-19, QoL score: quality of life impairment score, OMH score: overall mental health impairment score, ANX score: anxiety score, DPR: depression score._
